# artant-BE-backup

./: .env  .gitignore  README.md  db.sqlite3  deploy.sh  pyproject.toml  users.json
cart/: admin.py  models.py  serializers.py  urls.py  views.py
cart/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_alter_cart_user.py  0004_remove_cartline_variant_cartline_variant.py  (+15 more)
common/: urls.py  views.py
config/: settings.py  urls.py
direct_messages/: models.py
discount/: __init__.py  admin.py  models.py
events/: admin.py  models.py  serializers.py  urls.py  views.py
favorites/: admin.py  models.py  serializer.py  serializers.py  urls.py  views.py
middlewares/: user_logging_middleware.py
order/: __init__.py  admin.py  models.py
payments/: admin.py  models.py
product_attributes/: __init__.py  admin.py  apps.py  models.py  serializers.py
product_collections/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
product_variants/: admin.py  apps.py  models.py  serializers.py
products/: __init__.py  admin.py  models.py  serializers.py  urls.py  views.py
purchases/: admin.py  models.py  serializers.py  urls.py  views.py
reviews/: admin.py  models.py  serializers.py  urls.py  views.py
shops/: admin.py  models.py  serializers.py  test_views.py  urls.py  views.py
updates/: admin.py  models.py
user_activities/: admin.py  apps.py  models.py  urls.py  views.py
users/: __init__.py  admin.py  authentication.py  models.py  serializers.py  test_models.py  test_views.py  tests.py  urls.py  utils.py  views.py
(+212 files in other folders)
