[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Namhyeon Heo <nammath11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"
pillow = "^10.0.0"
djangorestframework = "^3.14.0"
django-cors-headers = "^4.2.0"
django-environ = "^0.11.1"
dj-database-url = "^2.1.0"
requests = "^2.31.0"
pymysql = "^1.1.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
